// Copyright (c) 2020 The Open-Transactions developers
// This Source Code Form is subject to the terms of the Mozilla Public
// License, v. 2.0. If a copy of the MPL was not distributed with this
// file, You can obtain one at http://mozilla.org/MPL/2.0/.

syntax = "proto2";

package opentxs.proto;
option java_package = "org.opentransactions.proto";
option java_outer_classname = "OTCreateNym";
option optimize_for = LITE_RUNTIME;

import public "AddClaim.proto";
import public "ContactEnums.proto";

message CreateNym {
    optional uint32 version = 1;
    optional ContactItemType type = 2;
    optional string name = 3;			// nym alias
    optional string seedid = 4;			// seed id
    optional int32 index = 5;			// derivation path (-1 for next index)
    repeated AddClaim claims = 6;
}
