// Copyright (c) 2020 The Open-Transactions developers
// This Source Code Form is subject to the terms of the Mozilla Public
// License, v. 2.0. If a copy of the MPL was not distributed with this
// file, You can obtain one at http://mozilla.org/MPL/2.0/.

syntax = "proto2";

package opentxs.proto;
option java_package = "org.opentransactions.proto";
option java_outer_classname = "OTMoveFunds";
option optimize_for = LITE_RUNTIME;

import public "RPCEnums.proto";

message MoveFunds {
    optional uint32 version = 1;
    optional RPCPaymentType type = 2;		// see RPCEnums.proto
    optional string sourceaccount = 3;		// source account id
    optional string destinationaccount = 4;	// destination account id
    optional string memo = 5;
    optional uint64 amount = 6;
    optional string amount_mp = 7;
}
